--- a/src/PartyRentingPlatform.Infrastructure/PartyRentingPlatform.Infrastructure.csproj
+++ b/src/PartyRentingPlatform.Infrastructure/PartyRentingPlatform.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
+        <PackageReference Include="Npgsql" />
         <PackageReference Include="Serilog" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
