--- a/src/PartyRentingPlatform/appsettings.Development.json
+++ b/src/PartyRentingPlatform/appsettings.Development.json
@@ -15,7 +15,7 @@
     ]
   },
   "ConnectionStrings": {
-    "AppDbContext": "Server=localhost;Database=PartyRentingPlatform;Port=5432;User Id=postgres;Password=123;Pooling=true;"
+    "AppDbContext": "Server=localhost;Database=PartyRentingPlatform;Port=5432;User Id=postgres;Password=123;"
   },
   "Security": {
     "EnforceHttps": false
