--- a/src/PartyRentingPlatform/appsettings.json
+++ b/src/PartyRentingPlatform/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContext": "Server=postgresql;Database=partyRentingPlatform;Port=5432;User Id=partyRentingPlatform;Password=;Integrated Security=true;Pooling=true;"
+    "AppDbContext": "Server=postgresql;Database=partyRentingPlatform;Port=5432;User Id=partyRentingPlatform;Password=;Pooling=true;"
   },
   "Security": {
     "Authentication": {
