--- a/src/PartyRentingPlatform.Domain.Services/PartyRentingPlatform.Domain.Services.csproj
+++ b/src/PartyRentingPlatform.Domain.Services/PartyRentingPlatform.Domain.Services.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentEmail.Smtp" />
         <PackageReference Include="JHipsterNet.Core" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
         <PackageReference Include="LanguageExt.Core" />
