--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -45,9 +45,13 @@
     "default_environment": "prod"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "1.9.7",
     "axios": "1.6.2",
     "bootstrap": "5.3.2",
