--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -67,11 +67,13 @@
     "react-redux-loading-bar": "5.0.5",
     "react-router": "6.20.1",
     "react-router-dom": "6.20.1",
+    "react-slick": "^0.30.1",
     "react-toastify": "9.1.3",
     "react-transition-group": "4.4.5",
     "reactstrap": "9.2.1",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2",
+    "slick-carousel": "^1.8.1",
     "tslib": "2.6.2",
     "uuid": "9.0.1"
   },
