--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -63,6 +63,7 @@
     "react-hook-form": "7.49.0",
     "react-jhipster": "0.25.3",
     "react-loadable": "5.5.0",
+    "react-parallax": "^3.5.1",
     "react-redux": "8.1.3",
     "react-redux-loading-bar": "5.0.5",
     "react-router": "6.20.1",
