Added Vnpay API
Ready to be used but not used anywhere

--- a/src/PartyRentingPlatform.Domain.Services/PartyRentingPlatform.Domain.Services.csproj
+++ b/src/PartyRentingPlatform.Domain.Services/PartyRentingPlatform.Domain.Services.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="JHipsterNet.Core" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
         <PackageReference Include="LanguageExt.Core" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
     </ItemGroup>
 
     <ItemGroup>
