--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -59,10 +59,12 @@
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "18.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.0",
     "react-jhipster": "0.25.3",
     "react-loadable": "5.5.0",
+    "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-redux": "8.1.3",
     "react-redux-loading-bar": "5.0.5",
@@ -134,7 +136,7 @@
     "ts-loader": "9.5.1",
     "typescript": "5.3.3",
     "wait-on": "7.2.0",
-    "webpack": "5.89.0",
+    "webpack": "5.90.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0",
