--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -53,6 +53,7 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "1.9.7",
+    "antd": "^5.14.2",
     "axios": "1.6.2",
     "bootstrap": "5.3.2",
     "dayjs": "1.11.10",
@@ -134,7 +135,7 @@
     "ts-loader": "9.5.1",
     "typescript": "5.3.3",
     "wait-on": "7.2.0",
-    "webpack": "5.89.0",  
+    "webpack": "5.90.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.10.0",
