--- a/src/PartyRentingPlatform/ClientApp/package.json
+++ b/src/PartyRentingPlatform/ClientApp/package.json
@@ -50,6 +50,7 @@
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "1.9.7",
